# uvrrpd

./: .gitignore  Makefile  Makefile.am  README.md  bits.h  common.h  configure.ac  list.h  log.c  log.h  uvrrpd.c  uvrrpd.h  vrrp.c  vrrp.h  vrrp_adv.c  vrrp_adv.h  vrrp_arp.c  vrrp_arp.h  vrrp_ctrl.c  vrrp_ctrl.h  vrrp_exec.c  vrrp_exec.h  vrrp_ip4.c  vrrp_ip6.c  vrrp_ipx.h  vrrp_na.c  vrrp_na.h  vrrp_net.c  vrrp_net.h  vrrp_options.c  vrrp_options.h  vrrp_rfc.h  vrrp_state.c  vrrp_state.h  vrrp_switch.sh  vrrp_timer.c  vrrp_timer.h
